--- a/index.html
+++ b/index.html
@@ -4,11 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/styles.css">
     <link rel="stylesheet" href="./assets/reset.css">
     <title>Weather Me This</title>
+    
 </head>
-<body>
+<body style="background-color: #ffffff;">
+
+    <nav id="nav" class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand h1" href="#">
+                <img src="./img/sun-behind-rain-cloud.png" alt="sun behind rain clouds" width="40" height="34" class="d-inline-block align-text-center">
+                WeatherMeThis
+            </a>
+            <form id="cityName" class="d-flex">
+                <input id="cityName" class="form-control me-2" type="search" placeholder="Enter city name" aria-label="Search">
+                <button class="btn btn-outline-dark" type="submit">Search</button>
+            </form>
+        </div>
+    </nav>
+
+
+    <div id="main-content" class="row mt-5 mx-3">
+
+        <div class="col-sm-12 col-md-4">
+            <div id="search-history-card" class="card">
+                <div class="card-body col-12">
+                    <h6 class="card-header">Search History</h6>
+                    <div id="btn-card-content" class="card-body">
+                        <div id="btn-div" class="card-body">
+                            <div id="btn-div" class="btn-group-verticle d-flex gap-1 mx-auto"></div>
+                            <div class="btn-group-verticle d-flex gap-1 mx-auto">
+                                <button id = "clear-btn" class="btn btn-outline-dark">Clear History</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
