added forcast and forcast details

--- a/index.html
+++ b/index.html
@@ -44,6 +44,32 @@
             </div>
         </div>
     </div>
+
+
+
+    <div class="col-sm-12 col-md-8">
+        <div id="forecast-accordian" class="accordian">
+
+            <div id="todays details" class="accordian-item">
+                <h2 class="accordian-header" id="panelsStayOpen-headingOne">
+                    <button class="accordian-button" type="button" data-bs-toggle="collapse" data-bs-targett="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                        Current Weather Forecast
+                    </button>
+                </h2>
+                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+                <div class="accordian-body">
+                    <h4 id="todays-date"></h4>
+                    <div id="icon">---</div>
+                    <p id="todays-summary">Summary:</p>
+                    <p id="todays-temp">Temperature:</p>
+                    <p id="todays-wind">Wind:</p>
+                    <p id="todays-humidity">Humidity:</p>
+                    <span id="todays-uv" class="badge">UV Index:</span>
+                </div>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
