--- a/index.html
+++ b/index.html
@@ -68,6 +68,22 @@
                 </div>
                 </div>
             </div>
+
+
+
+            <div id="5-day-weather" class="accordian-items">
+                <h2 class="accordian-header" id="panelsStayOpen-headingTwo">
+                <button class="accordian-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                    5-Day Weather Readings
+                </button>
+                </h2>
+
+                <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+                <div class="accordian-body">
+                    <div id="card-container" class="flex row"></div>
+                </div>
+                </div>
+            </div>
         </div>
     </div>
     
